FlightPath 5.x Changelog
========================

2017-10-18
  Made groups' internal machine name a required field, and forced them to be unique, in preparation of
  functionality for the Conditional Requirements module, as well as any other module which needs to
  identify groups by human-readable names.


2017-10-15
  Fixed bug when duplicating entire catalog year (typo in variable name for catalog_repeat).
  
  Fixed bug where it 'Back to degrees' link was linking to the wrong year.


2017-10-11
  Fixed mysql error in system.module.


2017-10-03
  Added extra caching & other techniques to speed up load times.  In some situations, load time has been decreased by 300%.
  
  Added new function, fpmct(), which is short for fpm(fp_debug_ct($val));


2017-09-24
  Fixed notices on Not Found page.  Re-ordered weight system and added new markup elements to degree edit form (to make it easier
  for other modules, ie, Conditional Requirements, to form_alter).
  

2017-09-23
  Fixed PHP notices on update function
  

2017-09-19
  Fixing PHP warnings on install.
  

2017-09-18
  Fixed bug where "process all definitions" wasn't loading groups with branches correctly.


2017-09-14
  Added concept of "set catalog repeats" to groups, which will automatically set all repeatable courses to repeat.
  
  Fixed popup_description bug for "checkbox" form element type.


2017-08-22
  Fixed PDO mysql error in student search when searching by major.
  

2017-08-16
  Fixed a bug where the "prevent_course_assignment..." setting wasn't working for groups.  It involved fixing another bug I discovered,
  where advising_weight of a degree wasn't being applied when it came to group assignments.
  
  Added a new setting to School Settings screen, where you can decide to show a warning or not on the View screens, if a student's major
  cannot be found.
  

2017-08-09
  Added a new option to Configure School Settings -- "prevent_course_assignment_to_both_degree_and_track".  If set to "Yes", then