@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2017-10-30
+  Removed functionality of having a course always get selected by default in a popup group listing.
+  
+
 2017-10-18
   Made groups' internal machine name a required field, and forced them to be unique, in preparation of
   functionality for the Conditional Requirements module, as well as any other module which needs to
